Maybe this is fixing the too big elements

--- a/frontend/frontend-flatgame/src/styles.css
+++ b/frontend/frontend-flatgame/src/styles.css
@@ -51,6 +51,14 @@ html, body {
   margin-bottom: 25px;
 }
 
+html { 
+   box-sizing: border-box; 
+},
+
+:before, *:after {
+  box-sizing: inherit; 
+}
+
 
 /*@ LARS why does this not work
 hr {
